tests/NormalTests/paczka1/fuzzy1/61018818.err
Error in line 9: G504Q A707 21,6
Error in line 27: G504Q A707 84,7
Error in line 25: S109 S109 33,9
Error in line 32: SUrgj6 S109 70,5
